# dormouse-detection

./: .gitignore  README.md  config.py  inference.py  main.py  pyproject.toml
data_downloader/: INaturalistDownloader.py  README.md  download_data.py
logs/fit/10-10_01-38-13/: events.out.tfevents.1728520712.UKFVFGM4D3Q05P.17637.0.v2
logs/fit/10-10_01-38-13/validation/: events.out.tfevents.1728522021.UKFVFGM4D3Q05P.17637.2.v2
logs/fit/31-8_01-32-18/: events.out.tfevents.1725064353.UKFVFGM4D3Q05P.7819.0.v2
logs/fit/31-8_01-32-18/validation/: events.out.tfevents.1725065733.UKFVFGM4D3Q05P.7819.2.v2
src/: data_loader.py  logger.py  metrics_callback.py  model.py  training_pipeline.py  utils.py
tests/: data_loader_test.py  inference_test.py
training_data/hazel_dormouse/: classes.txt
training_data/hazel_dormouse/obj_train_data/common_shrew/: 108247230.txt  108247376.txt  109547018.txt  109547023.txt  109547027.txt  109547035.txt  109547039.txt  109547044.txt  109547050.txt  114652163.txt  152949195.txt  167248724.txt  167248732.txt  167389945.txt  175700431.txt  175700467.txt  175700486.txt  62162173.txt  62162224.txt  62226657.txt  80462413.txt  92254783.txt
training_data/hazel_dormouse/obj_train_data/domestic_cat/: 415524539.txt  415543058.txt  415587498.txt  415652712.txt  415708564.txt  415718778.txt  415718779.txt  415843923.txt  416631264.txt  416634175.txt  416681857.txt  416693058.txt  416869203.txt  416955011.txt  416968514.txt  416968523.txt  417403567.txt  417494084.txt  417646376.txt  418206508.txt  418206512.txt  418239292.txt  418434785.txt  (+80 more)
(+319 files in other folders)
